@@ -4,7 +4,7 @@
 \alias{merge_motifs}
 \title{Merge motifs.}
 \usage{
-merge_motifs(motifs, method = "ALLR", use.type = "PPM", min.overlap = 6,
+merge_motifs(motifs, method = "PCC", use.type = "PPM", min.overlap = 6,
   min.mean.ic = 0.25, tryRC = TRUE, relative_entropy = FALSE,
   normalise.scores = FALSE, min.position.ic = 0, score.strat = "sum",
   new.name = NULL)
